// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render different states based on actions 1`] = `
Object {
  "counter": 0,
}
`;

exports[`should render different states based on actions 2`] = `
Object {
  "counter": 1,
}
`;

exports[`should render different states based on actions 3`] = `
Object {
  "counter": 2,
}
`;

exports[`should render different states based on actions 4`] = `
Object {
  "counter": 0,
}
`;

exports[`should render different states based on actions 5`] = `
Object {
  "counter": -1,
}
`;

exports[`should render different states based on actions 6`] = `
Object {
  "counter": -2,
}
`;

exports[`should render different states based on actions 7`] = `
Object {
  "counter": 0,
}
`;
